--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,10 @@
 			<artifactId>imagekit-java</artifactId>
 			<version>2.0.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-websocket</artifactId>
+		</dependency>
 
 	</dependencies>
 
