--- a/pom.xml
+++ b/pom.xml
@@ -121,10 +121,10 @@
 			<version>2.0.0</version>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-websocket</artifactId>
+			<groupId>com.google.firebase</groupId>
+			<artifactId>firebase-admin</artifactId>
+			<version>9.7.0</version>
 		</dependency>
-
 	</dependencies>
 
 	<build>
